[package]
name = "adnl-liteclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
aes = "0.8.3"
ctr = "0.9.2"
curve25519-dalek = "4.0.0"
x25519-dalek = { version = "2.0.0-rc.3", features = ["getrandom"] }
sha2 = "0.10.7"
base64 = "0.21.2"
rand = "0.8"
crc32fast = "1.3.2"
hex = "0.4.3"

[[example]]
name = "connect"
path = "examples/connect.rs"