[package]
name = "adnl-liteclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adnl-tcp = { git = "https://github.com/liketurbo/adnl-tcp.git", branch = "main" }
tl-proto = "0.4.3"
tokio = { version = "1", default-features = false }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "get_lite_time"
path = "examples/get_lite_time.rs"